fixed sample addresses alignment and footer wrapper

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -3,7 +3,7 @@
 //HEADER
 
 header {
-  height: 600px; 
+  height: 650px; 
   width: 100%;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0.5) 40%, rgba(255, 255, 255, 0.15) 50%, rgba(0, 0, 0, 0.9) 100%), url(/assets/new_york_empire_state_building_cityscape.jpg);
   background-size: cover;
@@ -69,7 +69,7 @@ h1 {
   text-align: center;
   line-height: 3.5rem;
   text-shadow: -1px -1px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 
@@ -138,4 +138,26 @@ form input::placeholder, select, option {
   display: none;
 }
 
+.sampleAddressContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.sampleAddresses {
+  margin-bottom: 50px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+
+  li {
+    margin: 0;
+    font-size: 2.5rem; 
+    color: #ffffff;
+    text-align: left;
+    line-height: 3rem;
+    text-shadow: -1px -1px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000;
+  }
+}
 
