--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,7 +260,7 @@ a {
   font-weight: normal;
 }
 header {
-  height: 600px;
+  height: 650px;
   width: 100%;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0.5) 40%, rgba(255, 255, 255, 0.15) 50%, rgba(0, 0, 0, 0.9) 100%), url(/assets/new_york_empire_state_building_cityscape.jpg);
   background-size: cover;
@@ -326,7 +326,7 @@ h1 {
   text-align: center;
   line-height: 3.5rem;
   text-shadow: -1px -1px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 input {
@@ -395,6 +395,28 @@ form input::placeholder, select, option {
 }
 .search {
   display: none;
+}
+
+.sampleAddressContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.sampleAddresses {
+  margin-bottom: 50px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+}
+.sampleAddresses li {
+  margin: 0;
+  font-size: 2.5rem;
+  color: #ffffff;
+  text-align: left;
+  line-height: 3rem;
+  text-shadow: -1px -1px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000;
 }
 
 .carousel {
@@ -732,6 +754,13 @@ footer {
   .noRecords {
     padding: 10px 0;
   }
+  .sampleAddresses {
+    margin-bottom: 0px;
+  }
+  .sampleAddresses li {
+    font-size: 2rem;
+    line-height: 2.2rem;
+  }
 }
 @media (max-width: 780px) {
   .mainTextContainer {
@@ -766,6 +795,9 @@ footer {
   }
 }
 @media (max-width: 680px) {
+  header {
+    height: 600px;
+  }
   form input::placeholder, select, option {
     font-size: 1.8rem;
   }
@@ -803,9 +835,22 @@ footer {
     padding-left: 30px;
     padding-right: 30px;
   }
+  .sampleAddresses {
+    font-size: 2rem;
+  }
+  .sampleAddresses li {
+    line-height: 2.2rem;
+  }
   .noRecords {
     padding: 2.5px 0;
     font-size: 1.5rem;
+  }
+  .sampleAddresses {
+    margin-bottom: 0px;
+  }
+  .sampleAddresses li {
+    font-size: 1.3rem;
+    line-height: 1.8rem;
   }
 }
 @media (max-width: 485px) {
